# totem

./: .gitignore  README.md
firmware/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  notes.rs  rust-toolchain.toml  shell.nix
firmware/.cargo/: config.toml
firmware/totem_app/: Cargo.toml  Embed.toml  memory.x
firmware/totem_app/src/: chaser.rs  ercp.rs  led_strip.rs  lib.rs  main.rs
firmware/totem_board/: Cargo.toml
firmware/totem_board/src/: board.rs  constants.rs  lib.rs  peripheral.rs
firmware/totem_ui/: Cargo.toml
firmware/totem_ui/src/: graphical.rs  lib.rs  physical.rs  state.rs
firmware/totem_utils/: Cargo.toml
firmware/totem_utils/src/: delay.rs  fake_timer.rs  lib.rs
tools/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  shell.nix
tools/totem_gui/: Cargo.toml
tools/totem_gui/src/: device.rs  lib.rs  main.rs
