[package]
name = "totem_app"
version = "1.0.0-dev"
authors = ["Jean-Philippe Cugnet <jean-philippe@cugnet.eu>"]
edition = "2021"
license = "GPL-3.0-only"
description = "A totem for music festivals, built with love to spread love."

[dependencies]
cortex-m-rtic = "1.0.0"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
totem_board = { path = "../totem_board" }
systick-monotonic = "1.0.0"

# For `cargo fix` to work.
[[bin]]
name = "totem_app"
test = false
bench = false
