[package]
name = "totem_app"
version = "1.0.0-dev"
authors = ["Jean-Philippe Cugnet <jean-philippe@cugnet.eu>"]
edition = "2021"
license = "GPL-3.0-only"
description = "A totem for music festivals, built with love to spread love."

[dependencies]
cortex-m-rtic = "1.0.0"
defmt = "0.3.0"
defmt-rtt = "0.3.0"
embedded-time = "0.12.1"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
totem_board = { path = "../totem_board" }
totem_ui = { path = "../totem_ui" }
totem_utils = { path = "../totem_utils" }
systick-monotonic = "1.0.0"

[dependencies.ercp_basic]
git = "https://github.com/ercp/ercp_basic.rs.git"
branch = "develop"
features = ["serial"]

[dependencies.led_effects]
git = "https://github.com/frangins/led_effects.git"
tag = "v0.1.0"

[dependencies.smart-leds]
git = "https://github.com/legrec14/smart-leds.git"
branch = "hsv-conversions"

[features]
default = ["ui_physical"]
ui_physical = ["totem_ui/physical"]
ui_graphical = ["totem_ui/graphical"]

# For `cargo fix` to work.
[[bin]]
name = "totem_app"
test = false
bench = false

[lib]
test = false
bench = false
