[package]
name = "totem_board"
version = "1.0.0-dev"
authors = ["Jean-Philippe Cugnet <jean-philippe@cugnet.eu>"]
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
cortex-m = { version = "0.7.5", features = ["inline-asm"] }

[dependencies.stm32l4xx-hal]
git = "https://github.com/ejpcmac/stm32l4xx-hal.git"
branch = "stm32l47x-adc"
features = ["stm32l476", "rt"]

[lib]
test = false
bench = false
