[package]
name = "totem_utils"
version = "1.0.0-dev"
authors = ["Jean-Philippe Cugnet <jean-philippe@cugnet.eu>"]
edition = "2021"
license = "GPL-3.0-only"

[dependencies]
cortex-m = "0.7.5"
embedded-hal = "0.2.0"

[dependencies.ercp_basic]
git = "https://github.com/ercp/ercp_basic.rs.git"
branch = "develop"

[lib]
test = false
bench = false
