[package]
name = "totem_gui"
version = "1.0.0-dev"
authors = ["Jean-Philippe Cugnet <jean-philippe@cugnet.eu>"]
edition = "2021"
license = "GPL-3.0-only"
description = "A graphical user interface for controlling the Totem."

[dependencies]
gtk = { version = "0.4.8", package = "gtk4" }
relm4 = "0.4.4"
relm4-macros = "0.4.4"
